--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "mongodb": "^4.5.0"
   },
   "devDependencies": {
+    "cypress": "^9.5.4",
+    "cypress-file-upload": "^5.0.8",
     "nodemon": "^2.0.15"
   }
 }
