--- a/package.json
+++ b/package.json
@@ -1,20 +1,17 @@
 {
-  "name": "TM_bois",
+  "name": "trackmania",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
+  "author": "Schin Ádám",
   "license": "ISC",
   "dependencies": {
+    "ejs": "^3.1.6",
     "express": "^4.17.3",
-    "mongodb": "^4.5.0"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.15"
+    "mongoose": "^6.3.0",
+    "xml-js": "^1.6.11"
   }
 }
