--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "local": "env-cmd -f ./config/local.env nodemon app.js",
+    "dev": "env-cmd -f ./config/dev.env --inspect nodemon app.js"
   },
   "author": "Schin Ádám",
   "license": "ISC",
   "dependencies": {
     "ejs": "^3.1.6",
+    "env-cmd": "^10.1.0",
     "express": "^4.17.3",
     "mongoose": "^6.3.0",
     "xml-js": "^1.6.11"
